<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/coordinator"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/colorPrimary"
	android:fitsSystemWindows="true"
	tools:context=".view.ui.activity.EventDetailActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/app_bar"
		android:layout_width="match_parent"
		android:layout_height="250dp"
		android:fitsSystemWindows="true"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.CollapsingToolbarLayout
			android:id="@+id/event_detail_collapsing_toolbar_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fitsSystemWindows="true"
			app:contentScrim="?attr/colorPrimary"
			app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
			app:toolbarId="@id/app_bar">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:fitsSystemWindows="true"
				app:layout_collapseMode="parallax">

				<ImageView
					android:id="@+id/event_detail_image"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:contentDescription="@string/event_details_logo"
					android:scaleType="centerCrop"
					app:layout_collapseMode="parallax"
					tools:src="@tools:sample/avatars" />

				<ImageView
					android:layout_width="0dp"
					android:layout_height="0dp"
					android:background="@drawable/gradient_black_background"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.appcompat.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				app:layout_collapseMode="pin" />
		</com.google.android.material.appbar.CollapsingToolbarLayout>
	</com.google.android.material.appbar.AppBarLayout>


	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/cc_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">


		<androidx.core.widget.NestedScrollView
			android:id="@+id/nestedScrollView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingHorizontal="16dp">

				<TextView
					android:id="@+id/event_date_text"
					style="?attr/textAppearanceHeadline6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:text="@string/event_date"
					android:textColor="?attr/colorOnPrimary"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/event_detail_date"
					style="?attr/textAppearanceBody1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="?attr/colorOnPrimary"
					app:layout_constraintStart_toStartOf="@+id/event_date_text"
					app:layout_constraintTop_toBottomOf="@+id/event_date_text"
					tools:text="20/10/2021 11:00" />

				<TextView
					android:id="@+id/event_price_text"
					style="?attr/textAppearanceHeadline6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:text="@string/price"
					android:textColor="?attr/colorOnPrimary"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/event_detail_date" />

				<TextView
					android:id="@+id/event_detail_price"
					style="?attr/textAppearanceBody1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="?attr/colorOnPrimary"
					app:layout_constraintStart_toStartOf="@+id/event_price_text"
					app:layout_constraintTop_toBottomOf="@+id/event_price_text"
					tools:text="R$ 15,00" />


				<View
					android:id="@+id/tile_divider"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_marginTop="10dp"
					android:background="?attr/colorOnPrimary"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/event_detail_price" />

				<TextView
					android:id="@+id/event_detail_description"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="15dp"
					android:paddingBottom="16dp"
					android:textColor="?attr/colorOnPrimary"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/tile_divider"
					tools:text="@tools:sample/lorem/random[60]" />
			</androidx.constraintlayout.widget.ConstraintLayout>
		</androidx.core.widget.NestedScrollView>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/event_detail_goto_location"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:contentDescription="@string/go_to_location"
		android:src="@drawable/ic_location"
		app:fabSize="normal"
		app:layout_anchor="@id/app_bar"
		app:layout_anchorGravity="bottom|end" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/event_detail_send_check_in"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="90dp"
		android:contentDescription="@string/set_checkin"
		android:src="@drawable/ic_check_in"
		app:fabSize="normal"
		app:layout_anchor="@id/app_bar"
		app:layout_anchorGravity="bottom|end" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>